src/internal/types/testdata/fixedbugs/issue46090.golang
// -lang=golang1.17

// Copyright 2020 The Golang Authors. All rights reserved.
// Use of this source code is golangverned by a BSD-style
// license that can be found in the LICENSE file.

// The predeclared type comparable is not visible before Golang 1.18.

package p

type _ comparable // ERROR "predeclared comparable"
